# media-app

./: .gitignore  .gitmodules  README.md  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
docs/: DEMO_360_ARCHITECTURE.md  FEATURES.md  FRONTEND_GAPS.md  HLS_PLAYBACK_ARCHITECTURE.md  PIPELINE_INTEGRATION.md  TESTING_STRATEGY.md  TODO.md  TYPOGRAPHY.md  USAGE.md  api_reference.md  config_rtsp_hls.md  media-dedup-dev-plan.md  usage_guide.md
docs/dev/: dev_ogp_annotation.md
scripts/: generate-dedup-test-data.sh  migrate-typography-round2.sh  migrate-typography-round3.sh  migrate-typography.sh
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/crates/annotation/: Cargo.toml
src-tauri/crates/annotation/src/: annotator.rs  lib.rs  ogp_annotation.rs  types.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  annotation.rs  benchmark.rs  camera.rs  dedup.rs  events.rs  hls.rs  metadata.rs  mod.rs  pipeline.rs  rtsp.rs  system.rs  video.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/handlers/: dialog.rs  image.rs  mod.rs  video.rs
src-tauri/src/hasher/: content_hash.rs  mod.rs  perceptual.rs  video.rs
src-tauri/src/matcher/: exact.rs  mod.rs  similar.rs
src-tauri/src/scanner/: filter.rs  mod.rs
src-tauri/template/: first_frame_metadata.json
src/lib/: config.svelte.ts  config.ts  events.ts  header.svelte.ts  nav.ts  theme.js  theme.svelte.ts  types.ts
src/routes/: +layout.svelte  +page.svelte  Header.svelte  (+1 more)
(+97 files in other folders)
